# asam_ods_exd_api_nptdms

./: .gitignore  Dockerfile  README.md  __init__.py  example_access_exd_api.ipynb  exd_api_server.py  external_data_file.py  external_data_file_handler_registry.py  external_data_file_interface.py  external_data_reader.py  mypy.ini  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: docker-build.yml  python-package.yml
asam_ods_exd_api_nptdms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: example.tdms
ods_exd_api_box/: __init__.py  exd_api_server.py  external_data_file_handler_registry.py  external_data_reader.py  file_handler_registry.py  file_interface.py  server.py
ods_exd_api_box/proto/: __init__.py  ods_external_data_pb2.py  ods_external_data_pb2.pyi  ods_external_data_pb2_grpc.py  ods_pb2.py  ods_pb2.pyi  ods_pb2_grpc.py
test/: test_exd_api.py  test_exd_api_datatypes.py  test_exd_api_different_length.py  test_exd_api_etc.py  test_nptdms.py
tests/: test_docker_integration.py  test_docker_integration_tls.py  test_exd_api.py  test_exd_api_datatypes.py  test_exd_api_different_length.py  test_exd_api_etc.py  test_nptdms.py
tests/certs/: client.crt  client.key  server.crt  server.key
